--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,9 @@ bleach==5.0.1
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
+click==8.1.3
+click-plugins==1.1.1
+cligj==0.7.2
 colorama==0.4.6
 contourpy==1.0.6
 cycler==0.11.0
@@ -19,7 +22,9 @@ entrypoints==0.4
 et-xmlfile==1.1.0
 executing==1.2.0
 fastjsonschema==2.16.2
+Fiona==1.8.22
 fonttools==4.38.0
+geopandas==0.12.1
 gitdb==4.0.9
 GitPython==3.1.29
 idna==3.4
@@ -38,6 +43,7 @@ MarkupSafe==2.1.1
 matplotlib==3.6.2
 matplotlib-inline==0.1.6
 mistune==2.0.4
+munch==2.5.0
 nbclassic==0.4.8
 nbclient==0.7.0
 nbconvert==7.2.5
@@ -62,7 +68,9 @@ pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.13.0
 pyparsing==3.0.9
+pyproj==3.4.0
 pyrsistent==0.19.2
+pyshape==0.1.1
 python-dateutil==2.8.2
 pytz==2022.6
 pywin32==305
@@ -73,6 +81,7 @@ requests==2.28.1
 scipy==1.9.3
 seaborn==0.12.1
 Send2Trash==1.8.0
+Shapely==1.8.5.post1
 six==1.16.0
 smmap==5.0.0
 sniffio==1.3.0
